Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/System_Configuration__c.object-meta.xml
<CustomObject>
    <label>System Configuration</label>
    <nameField>
        <label>System Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>