Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>System_Configuration</relationshipLabel>
    <relationshipName>System_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>