Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/fields/Rating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rating_Unit__c</fullName>
    <label>Rating Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>