Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System</label>
    <referenceTo>System__c</referenceTo>
    <relationshipLabel>System_Configuration</relationshipLabel>
    <relationshipName>System_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>