Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>