Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Rating_Unit__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>