Reward And Recognition System 2.0/force-app/main/default/objects/System_Configuration__c/listViews/Set_System_Configuration.listView-meta.xml
<ListView>
    <fullName>Set_System_Configuration</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Rating_Unit__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Points__c</field>
        <operation>equals</operation>
    </filters>
    <label>Set System Configuration</label>
</ListView>